tests/baselines/reference/decoratorsOnComputedProperties.errors.txt
tests/cases/compiler/decoratorsOnComputedProperties.ts(18,5): error TS1166: A computed property name in a class property declaration must have a simple literal type or a 'unique symbol' type.
tests/cases/compiler/decoratorsOnComputedProperties.ts(19,8): error TS1166: A computed property name in a class property declaration must have a simple literal type or a 'unique symbol' type.
tests/cases/compiler/decoratorsOnComputedProperties.ts(20,8): error TS1166: A computed property name in a class property declaration must have a simple literal type or a 'unique symbol' type.
tests/cases/compiler/decoratorsOnComputedProperties.ts(21,5): error TS1166: A computed property name in a class property declaration must have a simple literal type or a 'unique symbol' type.
tests/cases/compiler/decoratorsOnComputedProperties.ts(22,8): error TS1166: A computed property name in a class property declaration must have a simple literal type or a 'unique symbol' type.
tests/cases/compiler/decoratorsOnComputedProperties.ts(23,8): error TS1166: A computed property name in a class property declaration must have a simple literal type or a 'unique symbol' type.
tests/cases/compiler/decoratorsOnComputedProperties.ts(35,5): error TS1166: A computed property name in a class property declaration must have a simple literal type or a 'unique symbol' type.
tests/cases/compiler/decoratorsOnComputedProperties.ts(36,8): error TS1166: A computed property name in a class property declaration must have a simple literal type or a 'unique symbol' type.
tests/cases/compiler/decoratorsOnComputedProperties.ts(37,8): error TS1166: A computed property name in a class property declaration must have a simple literal type or a 'unique symbol' type.
tests/cases/compiler/decoratorsOnComputedProperties.ts(38,5): error TS1166: A computed property name in a class property declaration must have a simple literal type or a 'unique symbol' type.
tests/cases/compiler/decoratorsOnComputedProperties.ts(39,8): error TS1166: A computed property name in a class property declaration must have a simple literal type or a 'unique symbol' type.
tests/cases/compiler/decoratorsOnComputedProperties.ts(40,8): error TS1166: A computed property name in a class property declaration must have a simple literal type or a 'unique symbol' type.
tests/cases/compiler/decoratorsOnComputedProperties.ts(52,5): error TS1166: A computed property name in a class property declaration must have a simple literal type or a 'unique symbol' type.
tests/cases/compiler/decoratorsOnComputedProperties.ts(53,8): error TS1166: A computed property name in a class property declaration must have a simple literal type or a 'unique symbol' type.
tests/cases/compiler/decoratorsOnComputedProperties.ts(54,8): error TS1166: A computed property name in a class property declaration must have a simple literal type or a 'unique symbol' type.
tests/cases/compiler/decoratorsOnComputedProperties.ts(55,5): error TS1166: A computed property name in a class property declaration must have a simple literal type or a 'unique symbol' type.
tests/cases/compiler/decoratorsOnComputedProperties.ts(56,8): error TS1166: A computed property name in a class property declaration must have a simple literal type or a 'unique symbol' type.
tests/cases/compiler/decoratorsOnComputedProperties.ts(57,8): error TS1166: A computed property name in a class property declaration must have a simple literal type or a 'unique symbol' type.
tests/cases/compiler/decoratorsOnComputedProperties.ts(70,5): error TS1166: A computed property name in a class property declaration must have a simple literal type or a 'unique symbol' type.
tests/cases/compiler/decoratorsOnComputedProperties.ts(71,8): error TS1166: A computed property name in a class property declaration must have a simple literal type or a 'unique symbol' type.
tests/cases/compiler/decoratorsOnComputedProperties.ts(72,8): error TS1166: A computed property name in a class property declaration must have a simple literal type or a 'unique symbol' type.
tests/cases/compiler/decoratorsOnComputedProperties.ts(73,5): error TS1166: A computed property name in a class property declaration must have a simple literal type or a 'unique symbol' type.
tests/cases/compiler/decoratorsOnComputedProperties.ts(74,8): error TS1166: A computed property name in a class property declaration must have a simple literal type or a 'unique symbol' type.
tests/cases/compiler/decoratorsOnComputedProperties.ts(75,8): error TS1166: A computed property name in a class property declaration must have a simple literal type or a 'unique symbol' type.
tests/cases/compiler/decoratorsOnComputedProperties.ts(88,5): error TS1166: A computed property name in a class property declaration must have a simple literal type or a 'unique symbol' type.
tests/cases/compiler/decoratorsOnComputedProperties.ts(89,8): error TS1166: A computed property name in a class property declaration must have a simple literal type or a 'unique symbol' type.
tests/cases/compiler/decoratorsOnComputedProperties.ts(90,8): error TS1166: A computed property name in a class property declaration must have a simple literal type or a 'unique symbol' type.
tests/cases/compiler/decoratorsOnComputedProperties.ts(92,5): error TS1166: A computed property name in a class property declaration must have a simple literal type or a 'unique symbol' type.
tests/cases/compiler/decoratorsOnComputedProperties.ts(93,8): error TS1166: A computed property name in a class property declaration must have a simple literal type or a 'unique symbol' type.
tests/cases/compiler/decoratorsOnComputedProperties.ts(94,8): error TS1166: A computed property name in a class property declaration must have a simple literal type or a 'unique symbol' type.
tests/cases/compiler/decoratorsOnComputedProperties.ts(106,5): error TS1166: A computed property name in a class property declaration must have a simple literal type or a 'unique symbol' type.
tests/cases/compiler/decoratorsOnComputedProperties.ts(107,8): error TS1166: A computed property name in a class property declaration must have a simple literal type or a 'unique symbol' type.
tests/cases/compiler/decoratorsOnComputedProperties.ts(108,8): error TS1166: A computed property name in a class property declaration must have a simple literal type or a 'unique symbol' type.
tests/cases/compiler/decoratorsOnComputedProperties.ts(110,5): error TS1166: A computed property name in a class property declaration must have a simple literal type or a 'unique symbol' type.
tests/cases/compiler/decoratorsOnComputedProperties.ts(111,8): error TS1166: A computed property name in a class property declaration must have a simple literal type or a 'unique symbol' type.
tests/cases/compiler/decoratorsOnComputedProperties.ts(112,8): error TS1166: A computed property name in a class property declaration must have a simple literal type or a 'unique symbol' type.
tests/cases/compiler/decoratorsOnComputedProperties.ts(124,5): error TS1166: A computed property name in a class property declaration must have a simple literal type or a 'unique symbol' type.
tests/cases/compiler/decoratorsOnComputedProperties.ts(125,8): error TS1166: A computed property name in a class property declaration must have a simple literal type or a 'unique symbol' type.
tests/cases/compiler/decoratorsOnComputedProperties.ts(126,8): error TS1166: A computed property name in a class property declaration must have a simple literal type or a 'unique symbol' type.
tests/cases/compiler/decoratorsOnComputedProperties.ts(128,5): error TS1166: A computed property name in a class property declaration must have a simple literal type or a 'unique symbol' type.
tests/cases/compiler/decoratorsOnComputedProperties.ts(129,8): error TS1166: A computed property name in a class property declaration must have a simple literal type or a 'unique symbol' type.
tests/cases/compiler/decoratorsOnComputedProperties.ts(131,8): error TS1166: A computed property name in a class property declaration must have a simple literal type or a 'unique symbol' type.
tests/cases/compiler/decoratorsOnComputedProperties.ts(143,5): error TS1166: A computed property name in a class property declaration must have a simple literal type or a 'unique symbol' type.
tests/cases/compiler/decoratorsOnComputedProperties.ts(144,8): error TS1166: A computed property name in a class property declaration must have a simple literal type or a 'unique symbol' type.
tests/cases/compiler/decoratorsOnComputedProperties.ts(145,8): error TS1166: A computed property name in a class property declaration must have a simple literal type or a 'unique symbol' type.
tests/cases/compiler/decoratorsOnComputedProperties.ts(147,5): error TS1166: A computed property name in a class property declaration must have a simple literal type or a 'unique symbol' type.
tests/cases/compiler/decoratorsOnComputedProperties.ts(148,8): error TS1166: A computed property name in a class property declaration must have a simple literal type or a 'unique symbol' type.
tests/cases/compiler/decoratorsOnComputedProperties.ts(150,8): error TS1166: A computed property name in a class property declaration must have a simple literal type or a 'unique symbol' type.
tests/cases/compiler/decoratorsOnComputedProperties.ts(162,5): error TS1166: A computed property name in a class property declaration must have a simple literal type or a 'unique symbol' type.
tests/cases/compiler/decoratorsOnComputedProperties.ts(163,8): error TS1166: A computed property name in a class property declaration must have a simple literal type or a 'unique symbol' type.
tests/cases/compiler/decoratorsOnComputedProperties.ts(164,8): error TS1166: A computed property name in a class property declaration must have a simple literal type or a 'unique symbol' type.
tests/cases/compiler/decoratorsOnComputedProperties.ts(166,5): error TS1166: A computed property name in a class property declaration must have a simple literal type or a 'unique symbol' type.
tests/cases/compiler/decoratorsOnComputedProperties.ts(167,8): error TS1166: A computed property name in a class property declaration must have a simple literal type or a 'unique symbol' type.
tests/cases/compiler/decoratorsOnComputedProperties.ts(169,8): error TS1166: A computed property name in a class property declaration must have a simple literal type or a 'unique symbol' type.
tests/cases/compiler/decoratorsOnComputedProperties.ts(181,5): error TS1166: A computed property name in a class property declaration must have a simple literal type or a 'unique symbol' type.
tests/cases/compiler/decoratorsOnComputedProperties.ts(182,8): error TS1166: A computed property name in a class property declaration must have a simple literal type or a 'unique symbol' type.
tests/cases/compiler/decoratorsOnComputedProperties.ts(183,8): error TS1166: A computed property name in a class property declaration must have a simple literal type or a 'unique symbol' type.
tests/cases/compiler/decoratorsOnComputedProperties.ts(185,5): error TS1166: A computed property name in a class property declaration must have a simple literal type or a 'unique symbol' type.
tests/cases/compiler/decoratorsOnComputedProperties.ts(186,8): error TS1166: A computed property name in a class property declaration must have a simple literal type or a 'unique symbol' type.
tests/cases/compiler/decoratorsOnComputedProperties.ts(188,8): error TS1166: A computed property name in a class property declaration must have a simple literal type or a 'unique symbol' type.


==== tests/cases/compiler/decoratorsOnComputedProperties.ts (60 errors) ====
    function x(o: object, k: PropertyKey) { }
    let i = 0;
    function foo(): string { return ++i + ""; }
    
    const fieldNameA: string = "fieldName1";
    const fieldNameB: string = "fieldName2";
    const fieldNameC: string = "fieldName3";
    
    class A {
        @x ["property"]: any;
        @x [Symbol.toStringTag]: any;
        @x ["property2"]: any = 2;
        @x [Symbol.iterator]: any = null;
        ["property3"]: any;
        [Symbol.isConcatSpreadable]: any;
        ["property4"]: any = 2;
        [Symbol.match]: any = null;
        [foo()]: any;
        ~~~~~~~
!!! error TS1166: A computed property name in a class property declaration must have a simple literal type or a 'unique symbol' type.
        @x [foo()]: any;
           ~~~~~~~
!!! error TS1166: A computed property name in a class property declaration must have a simple literal type or a 'unique symbol' type.
        @x [foo()]: any = null;
           ~~~~~~~
!!! error TS1166: A computed property name in a class property declaration must have a simple literal type or a 'unique symbol' type.
        [fieldNameA]: any;
        ~~~~~~~~~~~~
!!! error TS1166: A computed property name in a class property declaration must have a simple literal type or a 'unique symbol' type.
        @x [fieldNameB]: any;
           ~~~~~~~~~~~~
!!! error TS1166: A computed property name in a class property declaration must have a simple literal type or a 'unique symbol' type.
        @x [fieldNameC]: any = null;
           ~~~~~~~~~~~~
!!! error TS1166: A computed property name in a class property declaration must have a simple literal type or a 'unique symbol' type.
    }
    
    void class B {
        @x ["property"]: any;
        @x [Symbol.toStringTag]: any;
        @x ["property2"]: any = 2;
        @x [Symbol.iterator]: any = null;
        ["property3"]: any;
        [Symbol.isConcatSpreadable]: any;
        ["property4"]: any = 2;
        [Symbol.match]: any = null;
        [foo()]: any;
        ~~~~~~~
!!! error TS1166: A computed property name in a class property declaration must have a simple literal type or a 'unique symbol' type.
        @x [foo()]: any;
           ~~~~~~~
!!! error TS1166: A computed property name in a class property declaration must have a simple literal type or a 'unique symbol' type.
        @x [foo()]: any = null;
           ~~~~~~~
!!! error TS1166: A computed property name in a class property declaration must have a simple literal type or a 'unique symbol' type.
        [fieldNameA]: any;
        ~~~~~~~~~~~~
!!! error TS1166: A computed property name in a class property declaration must have a simple literal type or a 'unique symbol' type.
        @x [fieldNameB]: any;
           ~~~~~~~~~~~~
!!! error TS1166: A computed property name in a class property declaration must have a simple literal type or a 'unique symbol' type.
        @x [fieldNameC]: any = null;
           ~~~~~~~~~~~~
!!! error TS1166: A computed property name in a class property declaration must have a simple literal type or a 'unique symbol' type.
    };
    
    class C {
        @x ["property"]: any;
        @x [Symbol.toStringTag]: any;
        @x ["property2"]: any = 2;
        @x [Symbol.iterator]: any = null;
        ["property3"]: any;
        [Symbol.isConcatSpreadable]: any;
        ["property4"]: any = 2;
        [Symbol.match]: any = null;
        [foo()]: any;
        ~~~~~~~
!!! error TS1166: A computed property name in a class property declaration must have a simple literal type or a 'unique symbol' type.
        @x [foo()]: any;
           ~~~~~~~
!!! error TS1166: A computed property name in a class property declaration must have a simple literal type or a 'unique symbol' type.
        @x [foo()]: any = null;
           ~~~~~~~
!!! error TS1166: A computed property name in a class property declaration must have a simple literal type or a 'unique symbol' type.
        [fieldNameA]: any;
        ~~~~~~~~~~~~
!!! error TS1166: A computed property name in a class property declaration must have a simple literal type or a 'unique symbol' type.
        @x [fieldNameB]: any;
           ~~~~~~~~~~~~
!!! error TS1166: A computed property name in a class property declaration must have a simple literal type or a 'unique symbol' type.
        @x [fieldNameC]: any = null;
           ~~~~~~~~~~~~
!!! error TS1166: A computed property name in a class property declaration must have a simple literal type or a 'unique symbol' type.
        ["some" + "method"]() {}
    }
    
    void class D {
        @x ["property"]: any;
        @x [Symbol.toStringTag]: any;
        @x ["property2"]: any = 2;
        @x [Symbol.iterator]: any = null;
        ["property3"]: any;
        [Symbol.isConcatSpreadable]: any;
        ["property4"]: any = 2;
        [Symbol.match]: any = null;
        [foo()]: any;
        ~~~~~~~
!!! error TS1166: A computed property name in a class property declaration must have a simple literal type or a 'unique symbol' type.
        @x [foo()]: any;
           ~~~~~~~
!!! error TS1166: A computed property name in a class property declaration must have a simple literal type or a 'unique symbol' type.
        @x [foo()]: any = null;
           ~~~~~~~
!!! error TS1166: A computed property name in a class property declaration must have a simple literal type or a 'unique symbol' type.
        [fieldNameA]: any;
        ~~~~~~~~~~~~
!!! error TS1166: A computed property name in a class property declaration must have a simple literal type or a 'unique symbol' type.
        @x [fieldNameB]: any;
           ~~~~~~~~~~~~
!!! error TS1166: A computed property name in a class property declaration must have a simple literal type or a 'unique symbol' type.
        @x [fieldNameC]: any = null;
           ~~~~~~~~~~~~
!!! error TS1166: A computed property name in a class property declaration must have a simple literal type or a 'unique symbol' type.
        ["some" + "method"]() {}
    };
    
    class E {
        @x ["property"]: any;
        @x [Symbol.toStringTag]: any;
        @x ["property2"]: any = 2;
        @x [Symbol.iterator]: any = null;
        ["property3"]: any;
        [Symbol.isConcatSpreadable]: any;
        ["property4"]: any = 2;
        [Symbol.match]: any = null;
        [foo()]: any;
        ~~~~~~~
!!! error TS1166: A computed property name in a class property declaration must have a simple literal type or a 'unique symbol' type.
        @x [foo()]: any;
           ~~~~~~~
!!! error TS1166: A computed property name in a class property declaration must have a simple literal type or a 'unique symbol' type.
        @x [foo()]: any = null;
           ~~~~~~~
!!! error TS1166: A computed property name in a class property declaration must have a simple literal type or a 'unique symbol' type.
        ["some" + "method"]() {}
        [fieldNameA]: any;
        ~~~~~~~~~~~~
!!! error TS1166: A computed property name in a class property declaration must have a simple literal type or a 'unique symbol' type.
        @x [fieldNameB]: any;
           ~~~~~~~~~~~~
!!! error TS1166: A computed property name in a class property declaration must have a simple literal type or a 'unique symbol' type.
        @x [fieldNameC]: any = null;
           ~~~~~~~~~~~~
!!! error TS1166: A computed property name in a class property declaration must have a simple literal type or a 'unique symbol' type.
    }
    
    void class F {
        @x ["property"]: any;
        @x [Symbol.toStringTag]: any;
        @x ["property2"]: any = 2;
        @x [Symbol.iterator]: any = null;
        ["property3"]: any;
        [Symbol.isConcatSpreadable]: any;
        ["property4"]: any = 2;
        [Symbol.match]: any = null;
        [foo()]: any;
        ~~~~~~~
!!! error TS1166: A computed property name in a class property declaration must have a simple literal type or a 'unique symbol' type.
        @x [foo()]: any;
           ~~~~~~~
!!! error TS1166: A computed property name in a class property declaration must have a simple literal type or a 'unique symbol' type.
        @x [foo()]: any = null;
           ~~~~~~~
!!! error TS1166: A computed property name in a class property declaration must have a simple literal type or a 'unique symbol' type.
        ["some" + "method"]() {}
        [fieldNameA]: any;
        ~~~~~~~~~~~~
!!! error TS1166: A computed property name in a class property declaration must have a simple literal type or a 'unique symbol' type.
        @x [fieldNameB]: any;
           ~~~~~~~~~~~~
!!! error TS1166: A computed property name in a class property declaration must have a simple literal type or a 'unique symbol' type.
        @x [fieldNameC]: any = null;
           ~~~~~~~~~~~~
!!! error TS1166: A computed property name in a class property declaration must have a simple literal type or a 'unique symbol' type.
    };
    
    class G {
        @x ["property"]: any;
        @x [Symbol.toStringTag]: any;
        @x ["property2"]: any = 2;
        @x [Symbol.iterator]: any = null;
        ["property3"]: any;
        [Symbol.isConcatSpreadable]: any;
        ["property4"]: any = 2;
        [Symbol.match]: any = null;
        [foo()]: any;
        ~~~~~~~
!!! error TS1166: A computed property name in a class property declaration must have a simple literal type or a 'unique symbol' type.
        @x [foo()]: any;
           ~~~~~~~
!!! error TS1166: A computed property name in a class property declaration must have a simple literal type or a 'unique symbol' type.
        @x [foo()]: any = null;
           ~~~~~~~
!!! error TS1166: A computed property name in a class property declaration must have a simple literal type or a 'unique symbol' type.
        ["some" + "method"]() {}
        [fieldNameA]: any;
        ~~~~~~~~~~~~
!!! error TS1166: A computed property name in a class property declaration must have a simple literal type or a 'unique symbol' type.
        @x [fieldNameB]: any;
           ~~~~~~~~~~~~
!!! error TS1166: A computed property name in a class property declaration must have a simple literal type or a 'unique symbol' type.
        ["some" + "method2"]() {}
        @x [fieldNameC]: any = null;
           ~~~~~~~~~~~~
!!! error TS1166: A computed property name in a class property declaration must have a simple literal type or a 'unique symbol' type.
    }
    
    void class H {
        @x ["property"]: any;
        @x [Symbol.toStringTag]: any;
        @x ["property2"]: any = 2;
        @x [Symbol.iterator]: any = null;
        ["property3"]: any;
        [Symbol.isConcatSpreadable]: any;
        ["property4"]: any = 2;
        [Symbol.match]: any = null;
        [foo()]: any;
        ~~~~~~~
!!! error TS1166: A computed property name in a class property declaration must have a simple literal type or a 'unique symbol' type.
        @x [foo()]: any;
           ~~~~~~~
!!! error TS1166: A computed property name in a class property declaration must have a simple literal type or a 'unique symbol' type.
        @x [foo()]: any = null;
           ~~~~~~~
!!! error TS1166: A computed property name in a class property declaration must have a simple literal type or a 'unique symbol' type.
        ["some" + "method"]() {}
        [fieldNameA]: any;
        ~~~~~~~~~~~~
!!! error TS1166: A computed property name in a class property declaration must have a simple literal type or a 'unique symbol' type.
        @x [fieldNameB]: any;
           ~~~~~~~~~~~~
!!! error TS1166: A computed property name in a class property declaration must have a simple literal type or a 'unique symbol' type.
        ["some" + "method2"]() {}
        @x [fieldNameC]: any = null;
           ~~~~~~~~~~~~
!!! error TS1166: A computed property name in a class property declaration must have a simple literal type or a 'unique symbol' type.
    };
    
    class I {
        @x ["property"]: any;
        @x [Symbol.toStringTag]: any;
        @x ["property2"]: any = 2;
        @x [Symbol.iterator]: any = null;
        ["property3"]: any;
        [Symbol.isConcatSpreadable]: any;
        ["property4"]: any = 2;
        [Symbol.match]: any = null;
        [foo()]: any;
        ~~~~~~~
!!! error TS1166: A computed property name in a class property declaration must have a simple literal type or a 'unique symbol' type.
        @x [foo()]: any;
           ~~~~~~~
!!! error TS1166: A computed property name in a class property declaration must have a simple literal type or a 'unique symbol' type.
        @x [foo()]: any = null;
           ~~~~~~~
!!! error TS1166: A computed property name in a class property declaration must have a simple literal type or a 'unique symbol' type.
        @x ["some" + "method"]() {}
        [fieldNameA]: any;
        ~~~~~~~~~~~~
!!! error TS1166: A computed property name in a class property declaration must have a simple literal type or a 'unique symbol' type.
        @x [fieldNameB]: any;
           ~~~~~~~~~~~~
!!! error TS1166: A computed property name in a class property declaration must have a simple literal type or a 'unique symbol' type.
        ["some" + "method2"]() {}
        @x [fieldNameC]: any = null;
           ~~~~~~~~~~~~
!!! error TS1166: A computed property name in a class property declaration must have a simple literal type or a 'unique symbol' type.
    }
    
    void class J {
        @x ["property"]: any;
        @x [Symbol.toStringTag]: any;
        @x ["property2"]: any = 2;
        @x [Symbol.iterator]: any = null;
        ["property3"]: any;
        [Symbol.isConcatSpreadable]: any;
        ["property4"]: any = 2;
        [Symbol.match]: any = null;
        [foo()]: any;
        ~~~~~~~
!!! error TS1166: A computed property name in a class property declaration must have a simple literal type or a 'unique symbol' type.
        @x [foo()]: any;
           ~~~~~~~
!!! error TS1166: A computed property name in a class property declaration must have a simple literal type or a 'unique symbol' type.
        @x [foo()]: any = null;
           ~~~~~~~
!!! error TS1166: A computed property name in a class property declaration must have a simple literal type or a 'unique symbol' type.
        @x ["some" + "method"]() {}
        [fieldNameA]: any;
        ~~~~~~~~~~~~
!!! error TS1166: A computed property name in a class property declaration must have a simple literal type or a 'unique symbol' type.
        @x [fieldNameB]: any;
           ~~~~~~~~~~~~
!!! error TS1166: A computed property name in a class property declaration must have a simple literal type or a 'unique symbol' type.
        ["some" + "method2"]() {}
        @x [fieldNameC]: any = null;
           ~~~~~~~~~~~~
!!! error TS1166: A computed property name in a class property declaration must have a simple literal type or a 'unique symbol' type.
    };